# FlockingBehavior-Swarm

./: CMakeLists.txt  README.md  out.txt  package.xml
launch/: call_quad.launch  quad.launch  reynolds.launch  swarm.launch  swarm_4.launch  swarm_5.launch
launch/call_swarm/: create_swarm_file.py  s10.launch  s11.launch  s12.launch  s13.launch  s14.launch  s15.launch  s16.launch  s17.launch  s18.launch  s19.launch  s2.launch  s20.launch  s3.launch  s4.launch  s5.launch  s6.launch  s7.launch  s8.launch  s9.launch
msg/: QuadFitness.msg  QuadHoverPos.msg  QuadState.msg
nodes/: best_fit.py  convergence.py  micro_pso.py  micro_pso_global.py  mid_reynolds.py  pos_controller.py  quad_distance_server.py  quad_info.py  reynolds.py  reynolds_particle.py  vel_controller.py
nodes/individual_movements/: go_and_keep_moving.py  go_and_stay.py  go_random_and_stay.py  go_up_and_keep_turning.py  go_up_and_stay.py  go_up_back_and_stay.py  go_up_diagonal_and_stay.py  go_up_down_and_stay.py  go_up_front_and_stay.py  go_up_left_and_stay.py  go_up_right_and_stay.py  go_up_right_turn_right_and_stay.py  go_up_turn_and_stay.py  go_up_turn_diagonal_and_stay.py  go_up_turn_right_and_stay.py  go_up_turn_turn_and_stay.py
nodes/movements/: go_random_and_stay.py  go_up_down_and_stay.py  go_up_turn_diagonal_and_stay.py  go_up_turn_right_and_stay.py  swarm_go_and_keep_moving.py  swarm_go_up_and_stay.py
nodes/other/: quad_distance_server.py  reynolds_individual.py
nodes/others/: take_off_and_land.py
nodes/quad/: pos_controller.py  quad_info.py
nodes/quad/movements/: go_and_keep_moving.py  go_and_stay.py  go_up_diagonal_and_stay.py  go_up_left_and_stay.py  go_up_right_and_stay.py  go_up_turn_and_stay.py
nodes/swarm/: micro_pso.py  reynolds.py
nodes/swarm_movements/: S4_go_up_and_circle.py  S4_go_up_and_stay.py  SN_go_up_and_stay.py  swarm_go_up_and_stay.py
rviz_cfg/: quad.rviz  s13.rviz  s2.rviz  s3.rviz  s4.rviz  s5.rviz  s6.rviz  s7.rviz  s8.rviz  s9.rviz
src/droneController/: droneController.ino
srv/: QuadDistance.srv  fitness.srv
