<?xml version="1.0"?>
<package>
  <name>swarm</name>
  <version>0.0.0</version>
  <description>The swarm package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="onairam309@gmail.com">Ona309</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/swarm</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="onairam309@gmail.com">Ona309</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>hector_gazebo_worlds</build_depend>
  <build_depend>hector_geotiff</build_depend>
  <build_depend>hector_mapping</build_depend>
  <build_depend>hector_map_tools</build_depend>
  <build_depend>hector_nav_msgs</build_depend>
  <build_depend>hector_pose_estimation</build_depend>
  <build_depend>hector_pose_estimation_core</build_depend>
  <build_depend>hector_quadrotor_controller</build_depend>
  <build_depend>hector_quadrotor_controller_gazebo</build_depend>
  <build_depend>hector_quadrotor_demo</build_depend>
  <build_depend>hector_quadrotor_description</build_depend>
  <build_depend>hector_quadrotor_gazebo</build_depend>
  <build_depend>hector_quadrotor_gazebo_plugins</build_depend>
  <build_depend>hector_quadrotor_model</build_depend>
  <build_depend>hector_quadrotor_pose_estimation</build_depend>
  <build_depend>hector_quadrotor_teleop</build_depend>
  <build_depend>hector_sensors_description</build_depend>
  <build_depend>hector_sensors_gazebo</build_depend>
  <build_depend>hector_trajectory_server</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_worlds</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_map_tools</run_depend>
  <run_depend>hector_nav_msgs</run_depend>
  <run_depend>hector_pose_estimation</run_depend>
  <run_depend>hector_pose_estimation_core</run_depend>
  <run_depend>hector_quadrotor_controller</run_depend>
  <run_depend>hector_quadrotor_controller_gazebo</run_depend>
  <run_depend>hector_quadrotor_demo</run_depend>
  <run_depend>hector_quadrotor_description</run_depend>
  <run_depend>hector_quadrotor_gazebo</run_depend>
  <run_depend>hector_quadrotor_gazebo_plugins</run_depend>
  <run_depend>hector_quadrotor_model</run_depend>
  <run_depend>hector_quadrotor_pose_estimation</run_depend>
  <run_depend>hector_quadrotor_teleop</run_depend>
  <run_depend>hector_sensors_description</run_depend>
  <run_depend>hector_sensors_gazebo</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>hector_uav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>